<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>at.bestsolution.quti</groupId>
	<artifactId>client</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>
	<name>Quti Java Client Libs</name>
	<description>Client library to access the calendar from an Java application</description>
	<developers>
		<developer>
			<name>Quti Team</name>
			<email>help@quti.dev</email>
		</developer>
	</developers>
	<url>
		https://quti.dev
	</url>
	<scm>
		<url>https://github.com/BestSolution-at/quti.git</url>
	</scm>

	<licenses>
		<license>
			<name>Apache-2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>
	<properties>
		<revision>999-SNAPSHOT</revision>

		<compiler-plugin.version>3.12.1</compiler-plugin.version>
		<maven.compiler.release>17</maven.compiler.release>
		<surefire-plugin.version>3.2.5</surefire-plugin.version>
		<flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
		
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<modules>
		<module>core</module>
		<module>jdk-http</module>
	</modules>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${compiler-plugin.version}</version>
				<configuration>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefire-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>${flatten-maven-plugin.version}</version>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
					<updatePomFile>true</updatePomFile>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>beso-private-releases</id>
			<url>https://nexus.ci.bestsolution.at/repository/beso-private-releases/</url>
		</repository>
		<snapshotRepository>
			<id>beso-private-snapshots</id>
			<url>https://nexus.ci.bestsolution.at/repository/beso-private-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

</project>